# ZimReader

./: .gitignore  LICENSE.md  README.md  build-flatpak.sh  fix-webengine.sh  io.github.SpaceyF.ZimReader.desktop  io.github.SpaceyF.ZimReader.metainfo.xml  io.github.SpaceyF.ZimReader.yml  pyproject.toml  requirements.txt  run-dev.sh  zimreader-launcher.sh
zimreader/: __init__.py  __main__.py  backend.py  scheme.py  shelf.py  window.py
