[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "zimreader"
version = "0.1.0"
description = "A KDE-themed reader for ZIM files (offline Wikipedia / Kiwix), with search."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "nontendo" }]
dependencies = [
    "PySide6>=6.6",
    "libzim>=3.4",
]

[project.scripts]
zimreader = "zimreader.__main__:main"

[tool.setuptools]
packages = ["zimreader"]
